# ccbase

./: .gitignore  CMakeLists.txt
application/: CMakeLists.txt
application/codegen/: CMakeLists.txt  codegen.cc  codegen.h  main.cc
application/helper/: dyn_loader.cc  dyn_loader.h  helper.cc  helper.h
application/lvgen/: CMakeLists.txt  lvdb.xml  lvgen.cc  lvgen.h  lvgen_c.cc  lvgen_cinsn.c  lvgen_cinsn.h  main.cc
application/lvgen/expat/: CMakeLists.txt  ascii.h  asciitab.h  expat_external.h  internal.h  latin1tab.h  siphash.h  winconfig.h  xmlparse.c  xmlrole.c  xmlrole.h  xmltok_impl.c  xmltok_impl.h
application/lvgen/export/: lvgen_cdefs.h
application/lvgen/parser/: CMakeLists.txt  lv_xml.c  lv_xml.h  lv_xml_base_types.c  lv_xml_base_types.h  lv_xml_component.c  lv_xml_component.h  lv_xml_component_private.h  lv_xml_parser.c  lv_xml_parser.h  lv_xml_private.h  lv_xml_style.c  lv_xml_style.h  lv_xml_utils.c  lv_xml_utils.h  lv_xml_widget.c  lv_xml_widget.h
application/lvgen/parser/expat/: CMakeLists.txt  expat.h  expat_config.h  iasciitab.h  nametab.h  utf8tab.h  xmltok.c  xmltok.h  xmltok_ns.c
application/lvgen/parser/lib/: CMakeLists.txt  lv_libc.h  lv_ll.c  lv_ll.h  lv_mem.c  lv_mem.h  lv_mem_core_clib.c  lv_path.c  lv_path.h  lv_sprintf_clib.c  lv_stdio.h  lv_string.h  lv_string_clib.c  lv_types.h
application/lvgen/parser/parsers/: lv_xml_arc_parser.c  lv_xml_bar_parser.c  lv_xml_button_parser.c  lv_xml_calendar_parser.c  lv_xml_canvas_parser.c  lv_xml_chart_parser.c  lv_xml_checkbox_parser.c  lv_xml_event_parser.c  lv_xml_image_parser.c  lv_xml_keyboard_parser.c  lv_xml_label_parser.c  lv_xml_obj_parser.c  lv_xml_obj_parser.h  lv_xml_roller_parser.c  lv_xml_slider_parser.c
application/lvsim/: CMakeLists.txt  CMakeSettings.json  XCMakePresets.json  lv_conf.h  main.c  main.cc
application/lvsim/SDL2/: CMakeLists.txt
application/lvsim/cmake/: lvgl.cmake
application/lvsim/driver/: CMakeLists.txt  config.h  file_watcher.c  file_watcher.h  simulator.c  simulator.h
application/lvsim/lvgl/: CMakeLists.txt  xml_parser_notify.h
application/lvsim/lvgl/@view/LVGL.si4project/: LVGL.sip_xab  LVGL.sip_xad  LVGL.sip_xc  LVGL.sip_xf  LVGL.sip_xm  LVGL.sip_xr  LVGL.sip_xsb  LVGL.sip_xsd  LVGL.siproj  LVGL.siwork
application/lvsim/lvgl/@view/LVGL.si4project/cache/parse/: .._libs_nema_gfx_include_build_version.h.sisc  .._libs_nema_gfx_include_nema_blender.h.sisc  .._libs_nema_gfx_include_nema_cmdlist.h.sisc  .._libs_nema_gfx_include_nema_core.h.sisc  .._libs_nema_gfx_include_nema_easing.h.sisc  .._libs_nema_gfx_include_nema_error.h.sisc  .._libs_nema_gfx_include_nema_font.h.sisc  .._libs_nema_gfx_include_nema_graphics.h.sisc  .._libs_nema_gfx_include_nema_hal.h.sisc  .._libs_nema_gfx_include_nema_interpolators.h.sisc  .._libs_nema_gfx_include_nema_math.h.sisc  .._libs_nema_gfx_include_nema_matrix3x3.h.sisc  .._libs_nema_gfx_include_nema_matrix4x4.h.sisc  .._libs_nema_gfx_include_nema_provisional.h.sisc  .._libs_nema_gfx_include_nema_raster.h.sisc  .._libs_nema_gfx_include_nema_sys_defs.h.sisc  .._libs_nema_gfx_include_nema_transitions.h.sisc  .._libs_nema_gfx_include_nema_utils.h.sisc  .._libs_nema_gfx_include_nema_version.h.sisc  .._libs_nema_gfx_include_nema_vg.h.sisc  .._libs_nema_gfx_include_nema_vg_context.h.sisc  .._libs_nema_gfx_include_nema_vg_font.h.sisc  .._libs_nema_gfx_include_nema_vg_paint.h.sisc  .._libs_nema_gfx_include_nema_vg_path.h.sisc  .._libs_nema_gfx_include_nema_vg_tsvg.h.sisc  .._libs_nema_gfx_include_nema_vg_version.h.sisc  .._libs_nema_gfx_include_tsi_malloc.h.sisc  .._src_core_lv_global.h.sisc  .._src_core_lv_group.c.sisc  .._src_core_lv_group.h.sisc  .._src_core_lv_group_private.h.sisc  .._src_core_lv_obj.c.sisc  .._src_core_lv_obj.h.sisc  .._src_core_lv_obj_class.c.sisc  .._src_core_lv_obj_class.h.sisc  .._src_core_lv_obj_class_private.h.sisc  .._src_core_lv_obj_draw.c.sisc  .._src_core_lv_obj_draw.h.sisc  .._src_core_lv_obj_draw_private.h.sisc  .._src_core_lv_obj_event.c.sisc  (+976 more)
application/lvsim/lvgl/env_support/cmake/: os_desktop.cmake
application/lvsim/lvgl/examples/others/xml/: lv_example_xml_2.c  view.xml
application/lvsim/lvgl/src/others/xml/: lv_xml_component.c
application/lvsim/plugin/: CMakeLists.txt  plugin.cc  plugin.h
application/lvsim/plugin/resloader/: CMakeLists.txt  loader.cc  lvgl_res_loader.c  lvgl_res_loader.h  lz4.c  res_manager_api.c  res_manager_api.h  res_mempool.c  res_mempool.h  res_port.h
application/lvsim/xml/: my_card.xml  view.xml
application/re_codegen/: CMakeLists.txt  main.cc
application/rescan/: CMakeLists.txt  doc_generator.cc  doc_generator.h  main.cc  rescan.cc  rescan.h  xml_generator.cc  xml_generator.h
application/test/: CMakeLists.txt  test.cpp
base/: CMakeLists.txt  process_util_win.cc  string_util.cc  sync_socket_win.cc
base/files/: file_path_watcher_win.cc
base/memory/: ref_counted.cc
base/threading/: platform_thread.h
cmake/: extension.cmake  extensions.cmake
test/: test.cpp
