# General base library

set(BASE_TARGET_NAME "base")

add_library(${BASE_TARGET_NAME} SHARED "")

set(BASE_PLATFORM_SOURCE)
set(BASE_PLATFORM_COMPILE_OPTIONS)
set(BASE_LINK_PLATFORM_LIBRARIES)
set(BASE_INCLUDE_PLATFORM_DIRECTORIES)

if (CMAKE_HOST_UNIX)
    set(BASE_PLATFORM_COMPILE_OPTIONS
        -DBASE_IMPLEMENTATION
        -DUSE_SYSTEM_LIBEVENT
    )

    set(BASE_LINK_PLATFORM_LIBRARIES    
        glib-2.0
        pthread
    )

    set(BASE_INCLUDE_PLATFORM_DIRECTORIES   
        /usr/local/include/glib-2.0
        /usr/local/lib/glib-2.0/include # for glibconfig.h
    )

    set(BASE_PLATFORM_SOURCE  
        base_paths_posix.cc
        base_paths_posix.h
        file_descriptor_posix.h
        file_util_posix.cc
        global_descriptors_posix.cc
        global_descriptors_posix.h
        guid_posix.cc
        hi_res_timer_manager_posix.cc
        native_library_posix.cc
        platform_file_posix.cc
        process_posix.cc
        process_util_posix.cc
        rand_util_posix.cc
        safe_strerror_posix.cc
        safe_strerror_posix.h
        shared_memory_posix.cc
        string_util_posix.h
        sync_socket_posix.cc
        sys_info_posix.cc
        sys_string_conversions_posix.cc
        time_posix.cc
        debug/stack_trace_posix.cc
        files/dir_reader_posix.h
        synchronization/condition_variable_posix.cc
        synchronization/lock_impl_posix.cc
        synchronization/waitable_event_posix.cc
        synchronization/waitable_event_watcher_posix.cc
        system_monitor/system_monitor_posix.cc
        threading/platform_thread_posix.cc
        threading/thread_local_posix.cc
        threading/thread_local_storage_posix.cc
        threading/worker_pool_posix.cc
        threading/worker_pool_posix.h
        file_util_linux.cc
        linux_util.cc
        linux_util.h
        process_linux.cc
        process_util_linux.cc
        sys_info_linux.cc
        files/dir_reader_linux.h
        files/file_path_watcher_linux.cc
        third_party/nspr/prcpucfg_linux.h
        message_pump_libevent.h
        message_pump_libevent.cc
    )
	
elseif (CMAKE_HOST_WIN32)
    add_compile_options(
        /DWIN32
    )
    set(BASE_PLATFORM_COMPILE_OPTIONS
        /DBASE_IMPLEMENTATION
        /D_INVALID_MEMORY_ORDER
		/D_WINDLL
		/D_WINDOWS
		/D_CRT_SECURE_NO_WARNINGS
		/D_UNICODE
		/DUNICODE
        /JMC
        /MP
        /Gm- 
        /sdl-
        /errorReport:prompt 
        /WX- 
        /Zc:forScope 
        /Gd
        /diagnostics:column
        /wd4251
    )

    set(BASE_LINK_PLATFORM_LIBRARIES    
        DbgHelp
        Mincore
    )

    set(BASE_PLATFORM_SOURCE  
        base_paths_win.cc
        base_paths_win.h
        #file_descriptor_posix.h
        #file_util_posix.cc
        #global_descriptors_posix.cc
        #global_descriptors_posix.h
        guid_win.cc
        hi_res_timer_manager_win.cc
        native_library_win.cc
        platform_file_win.cc
        process_win.cc
        process_util_win.cc
        rand_util_win.cc
        #safe_strerror_posix.cc
        #safe_strerror_posix.h
        shared_memory_win.cc
        string_util_win.h
        sync_socket_win.cc
        sys_info_win.cc
        sys_string_conversions_win.cc
        #time_posix.cc
        base_time_win.cc
        debug/stack_trace_win.cc
        #files/dir_reader_posix.h
        synchronization/condition_variable_win.cc
        synchronization/lock_impl_win.cc
        synchronization/waitable_event_win.cc
        synchronization/waitable_event_watcher_win.cc
        system_monitor/system_monitor_win.cc
        threading/platform_thread_win.cc
        threading/thread_local_win.cc
        threading/thread_local_storage_win.cc
        threading/worker_pool_win.cc
        #threading/worker_pool_posix.h
        file_util_win.cc
        #linux_util.cc
        #linux_util.h
        #files/dir_reader_linux.h
        files/file_path_watcher_win.cc
        third_party/nspr/prcpucfg_win.h
        message_pump_win.h
        message_pump_win.cc

        win/dllmain.cc
        win/enum_variant.cc
        win/enum_variant.h
        win/iunknown_impl.cc
        win/iunknown_impl.h
        win/object_watcher.cc
        win/object_watcher.h
        win/registry.cc
        win/registry.h
        win/resource_util.h
        win/scoped_bstr.cc
        win/scoped_bstr.h
        win/scoped_comptr.h
        win/scoped_com_initializer.h
        win/scoped_co_mem.h
        win/scoped_gdi_object.h
        win/scoped_handle.cc
        win/scoped_handle.h
        win/scoped_hdc.h
        win/scoped_hglobal.h
        win/scoped_process_information.cc
        win/scoped_process_information.h
        win/scoped_select_object.h
        win/scoped_variant.cc
        win/scoped_variant.h
        win/shortcut.cc
        win/shortcut.h
        win/startup_information.cc
        win/startup_information.h
        win/windows_version.cc
        win/windows_version.h
        win/win_util.cc
        win/win_util.h
        #win/wrapped_window_proc.cc
        #win/wrapped_window_proc.h
    )
endif()

set(BASE_SOURCE 
    atomic_sequence_num.h
    at_exit.h
    auto_reset.h
    base64.h
    base_export.h
    base_paths.h
    base_switches.h
    basictypes.h
    bind.h
    bind_helpers.h
    bind_internal.h
    bits.h
    build_time.h
    callback.h
    callback_forward.h
    callback_helpers.h
    callback_internal.h
    cancelable_callback.h
    command_line.h
    compiler_specific.h
    cpu.h
    critical_closure.h
    debug/alias.h
    debug/leak_tracker.h
    debug/stack_trace.h
    dispatchers.h
    eintr_wrapper.h
    environment.h
    event_types.h
    files/dir_reader_fallback.h
    files/file_path_watcher.h
    file_descriptor_shuffle.h
    file_path.h
    file_util.h
    file_util_proxy.h
    file_version_info.h
    float_util.h
    format_macros.h
    guid.h
    hash.h
    hash_tables.h
    hi_res_timer_manager.h
    id_map.h
    json/json_file_value_serializer.h
    json/json_parser.h
    json/json_reader.h
    json/json_string_value_serializer.h
    json/json_value_converter.h
    json/json_writer.h
    json/string_escape.h
    lazy_instance.h
    linked_list.h
    location.h
    logging.h
    md5.h
    memory/aligned_memory.h
    memory/linked_ptr.h
    memory/mru_cache.h
    memory/ref_counted.h
    memory/ref_counted_memory.h
    memory/scoped_handle.h
    memory/scoped_open_process.h
    memory/scoped_policy.h
    memory/scoped_ptr.h
    memory/scoped_vector.h
    memory/singleton.h
    memory/weak_ptr.h
    message_loop.h
    message_loop_proxy.h
    message_loop_proxy_impl.h
    message_pump.h
    message_pump_default.h
    message_pump_dispatcher.h
    message_pump_observer.h
    native_library.h
    nullable_string16.h
    observer_list.h
    observer_list_threadsafe.h
    path_service.h
    pending_task.h
    pickle.h
    platform_file.h
    port.h
    process.h
    process_info.h
    process_util.h
    rand_util.h
    run_loop.h
    scoped_native_library.h
    scoped_observer.h
    scoped_temp_dir.h
    sequenced_task_runner.h
    sequenced_task_runner_helpers.h
    sha1.h
    shared_memory.h
    single_thread_task_runner.h
    stack_container.h
    stl_util.h
    string16.h
    stringize_macros.h
    stringprintf.h
    string_number_conversions.h
    string_piece.h
    string_split.h
    string_tokenizer.h
    string_util.h
    supports_user_data.h
    synchronization/cancellation_flag.h
    synchronization/condition_variable.h
    synchronization/lock.h
    synchronization/lock_impl.h
    synchronization/spin_wait.h
    synchronization/waitable_event.h
    synchronization/waitable_event_watcher.h
    sync_socket.h
    system_monitor/system_monitor.h
    sys_byteorder.h
    sys_info.h
    sys_string_conversions.h
    task_runner.h
    task_runner_util.h
    template_util.h
    third_party/dmg_fp/dmg_fp.h
    third_party/icu/icu_utf.h
    third_party/modp_b64/modp_b64.h
    third_party/modp_b64/modp_b64_data.h
    third_party/nspr/prcpucfg.h
    third_party/nspr/prtime.h
    third_party/nspr/prtypes.h
    threading/non_thread_safe.h
    threading/non_thread_safe_impl.h
    threading/platform_thread.h
    threading/post_task_and_reply_impl.h
    threading/sequenced_worker_pool.h
    threading/simple_thread.h
    threading/thread.h
    threading/thread_checker.h
    threading/thread_checker_impl.h
    threading/thread_collision_warner.h
    threading/thread_local.h
    threading/thread_local_storage.h
    threading/thread_restrictions.h
    threading/watchdog.h
    threading/worker_pool.h
    thread_task_runner_handle.h
    base_time.h
    timer.h
    utf_offset_string_conversions.h
    utf_string_conversions.h
    utf_string_conversion_utils.h
    values.h
    value_conversions.h
    version.h
    vlog.h
    at_exit.cc
    base64.cc
    base_paths.cc
    base_switches.cc
    bind_helpers.cc
    build_time.cc
    callback_internal.cc
    check_example.cc
    command_line.cc
    cpu.cc
    debug/alias.cc
    debug/stack_trace.cc
    environment.cc
    files/file_path_watcher.cc
    file_descriptor_shuffle.cc
    file_path.cc
    file_util.cc
    file_util_proxy.cc
    guid.cc
    hash.cc
    json/json_file_value_serializer.cc
    json/json_parser.cc
    json/json_reader.cc
    json/json_string_value_serializer.cc
    json/json_writer.cc
    json/string_escape.cc
    lazy_instance.cc
    location.cc
    logging.cc
    md5.cc
    memory/aligned_memory.cc
    memory/ref_counted.cc
    memory/ref_counted_memory.cc
    memory/singleton.cc
    memory/weak_ptr.cc
    message_loop.cc
    message_loop_proxy.cc
    message_loop_proxy_impl.cc
    message_pump.cc
    message_pump_default.cc
    path_service.cc
    pending_task.cc
    pickle.cc
    platform_file.cc
    process_util.cc
    rand_util.cc
    run_loop.cc
    scoped_native_library.cc
    scoped_temp_dir.cc
    sequenced_task_runner.cc
    sha1_portable.cc
    string16.cc
    stringprintf.cc
    string_number_conversions.cc
    string_piece.cc
    string_split.cc
    string_util.cc
    supports_user_data.cc
    synchronization/cancellation_flag.cc
    synchronization/lock.cc
    system_monitor/system_monitor.cc
    task_runner.cc
    third_party/dmg_fp/dtoa_wrapper.cc
    third_party/dmg_fp/g_fmt.cc
    third_party/icu/icu_utf.cc
    third_party/modp_b64/modp_b64.cc
    third_party/nspr/prtime.cc
    threading/non_thread_safe_impl.cc
    threading/post_task_and_reply_impl.cc
    threading/sequenced_worker_pool.cc
    threading/simple_thread.cc
    threading/thread.cc
    threading/thread_checker_impl.cc
    threading/thread_collision_warner.cc
    threading/thread_restrictions.cc
    threading/watchdog.cc
    threading/worker_pool.cc
    thread_task_runner_handle.cc
    base_time.cc
    timer.cc
    utf_offset_string_conversions.cc
    utf_string_conversions.cc
    utf_string_conversion_utils.cc
    values.cc
    value_conversions.cc
    version.cc
    vlog.cc
)

target_include_directories(${BASE_TARGET_NAME}
    PRIVATE
    .
    ..
    ${BASE_INCLUDE_PLATFORM_DIRECTORIES}
)

target_compile_options(${BASE_TARGET_NAME}
    PRIVATE
    ${BASE_PLATFORM_COMPILE_OPTIONS}
)

target_sources(${BASE_TARGET_NAME} 
    PRIVATE
    ${BASE_SOURCE}
    ${BASE_PLATFORM_SOURCE}
)

set_property(GLOBAL APPEND PROPERTY common_libs ${BASE_TARGET_NAME})
target_link_libraries(${BASE_TARGET_NAME}
    ${BASE_LINK_PLATFORM_LIBRARIES}
)

set_property(TARGET ${BASE_TARGET_NAME} PROPERTY POSITION_INDEPENDENT_CODE ON)